Convert bitmap cursors to pixmap cursors

Workaround for Qt5 issue where bitmaps cursors are not
correctly displayed under wayland (QTBUG-95434).